try to fix overlaps

--- a/app/(landing)/views/partners/partners.module.scss
+++ b/app/(landing)/views/partners/partners.module.scss
@@ -35,7 +35,7 @@ $height: 60px;
     margin: 0;
 
     $gap: var(--margin-700);
-    $duration: 60s;
+    $duration: 120s;
 
     height: 100%;
     display: flex;
